# rusty_im

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  mockup.html  view_test.sql
migrations/: 20211003161909_core.down.sql  20211003161909_core.up.sql
migrations/2021-04-11-204336_data/: down.sql  up.sql
migrations/2021-04-11-204336_manufacturer/: down.sql  up.sql
res/: down.sql  up.sql
res/0_manufacturer/: down.sql  up.sql
src/: cli.rs  config.rs  database.rs  db.rs  lib.rs  main.rs  schema.rs
src/cli/: dev.rs  manufacturer.rs  migration.rs  part.rs  tag.rs  tagname.rs  types.rs  user.rs
src/cli/dev/: manufacturer.rs  migration.rs  part.rs  tag.rs  tagname.rs
src/cli/user/: add.rs  list.rs  tag.rs  update.rs
src/database/: model.rs
src/db/: manufacturer.rs  migration.rs  part.rs  schema.rs  tag.rs  tagname.rs
src/entity/: batch.rs  item.rs  mod.rs  model.rs  prelude.rs  property.rs
