[package]
name = "rusty_im"
version = "0.1.0"
authors = ["andi-makes <26302678+andi-makes@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = { version = "0.15.0" }
structopt = { version = "0.3.21" }