[package]
name = "rusty_im"
version = "0.1.0"
authors = ["andi-makes <26302678+andi-makes@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Diesel is used to communicate with the database
diesel = { version = "1.4.6", features = ["sqlite"] }
# .env file stores configurations, this parses it
dotenv = { version = "0.15.0" }
# implements XDG Base Directory Specification, used for determining where to save config files
directories = { version = "3.0.2" }
# uses clap to generate a cli from structs and enums
structopt = { version = "0.3.21" }
# used to embed diesel migration files into the binary
# not using diesel-embed because it doesn't allow reverting migrations
rust-embed = { version = "5.9.0", features = ["debug-embed", "interpolate-folder-path", "compression"] }